Removed dummy text.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">BlockBench</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">Hyperledger++</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -244,7 +244,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">traceto.io</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">TBD.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -274,7 +274,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">MediLot</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">TBD.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -304,7 +304,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">Zilliqa</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">TBD.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -334,7 +334,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">Kyber Network</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">TBD.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
@@ -364,7 +364,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">Provenance</h2>
                   <hr class="star-dark mb-5">
                   <!-- <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-                  <p class="mb-5">TBD.</p>
+                  <p class="mb-5">Under construction...</p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
                 </div>
               </div>
