--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Blockchain@NUS</a>
-      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand js-scroll-trigger text-main" href="#page-top">Blockchain@NUS</a>
+      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-main rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#basics">Basics</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-main" href="#basics">Basics</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
@@ -47,14 +47,14 @@
     </div>
   </nav>
   <!-- Header -->
-  <header class="masthead bg-primary text-white text-center">
+  <header class="masthead bg-primary text-main text-center">
     <div class="container">
       <div class="row mb-md-2">
         <div class="col-6 offset-md-1 col-md-5 offset-xl-2 col-xl-4">
           <img class="img-fluid mb-5 d-block mx-auto" src="img/nus-comp-logo-trans.png" alt="NUS School of Computing">
         </div>
         <div class="col-6 col-md-5 col-xl-4">
-          <img class="img-fluid mb-5 d-block mx-auto" src="img/blockchain-logo-trans.png" alt="Blockchain">
+          <img class="img-fluid mb-5 d-block mx-auto" src="img/blockchain-logo.png" alt="Blockchain">
         </div>
       </div>
       <h1 class="text-uppercase mb-0 d-none d-sm-block">Blockchain@NUS</h1>
@@ -98,9 +98,9 @@
     </div>
   </section>
   <!-- About Section -->
-  <section class="bg-primary text-white mb-0" id="about">
+  <section class="bg-primary text-main mb-0" id="about">
     <div class="container">
-      <h2 class="text-center text-uppercase text-white">The NUS Blockchain Community</h2>
+      <h2 class="text-center text-uppercase text-main">The NUS Blockchain Community</h2>
       <hr class="star-light mb-5">
       <div class="mx-0 p-0">
         <div class="row">
@@ -134,7 +134,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-blockbench">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -164,7 +164,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-hyperledger-pp">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -194,7 +194,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-privacy-protect">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -225,7 +225,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-traceto">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -255,7 +255,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-medilot">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -285,7 +285,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-zilliqa">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -315,7 +315,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-kyber">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -345,7 +345,7 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <a class="portfolio-item d-block mx-auto mb-0" href="#project-provenance">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-main">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
@@ -389,20 +389,20 @@
         </div>
         <div class="col-md-4 d-none d-lg-block order-12">
           <h4 class="text-uppercase mb-3">Links</h4>
-          <p class="lead mb-0"><a href="http://www.comp.nus.edu.sg/~dbsystem/" style="text-decoration: none" target="_blank">NUS Database System Research Lab</a></p>
+          <p class="lead mb-0"><a href="https://www.comp.nus.edu.sg/~dbsystem/" style="text-decoration: none" target="_blank">NUS Database System Research Lab</a></p>
         </div>
       </div>
     </div>
   </footer>
   <!-- Copyright -->
-  <div class="copyright py-4 text-center text-white">
+  <div class="copyright py-4 text-center text-main">
     <div class="container">
-      <small>Copyright &copy; <a href="http://www.comp.nus.edu.sg/" style="text-decoration: none" target="_blank">NUS School of Computing</a> 2018</small>
+      <small>Copyright &copy; <a href="https://www.comp.nus.edu.sg/" style="text-decoration: none" target="_blank">NUS School of Computing</a> 2018</small>
     </div>
   </div>
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+    <a class="js-scroll-trigger d-block text-center text-main rounded" href="#page-top">
         <i class="fa fa-chevron-up"></i>
       </a>
   </div>
