Added contents for privacy and P2P.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
           </a>
           <h5 class="text-center mt-2 mb-1">Security & Privacy</a></h5>
           <p class="text-center">
-            ...</p>
+            Harnessing blockchain for decentralized, trusted computing.
+          </p>
         </div>
         <!-- Project Brief: Privacy -->
         <div class="portfolio-modal mfp-hide" id="project-privacy">
@@ -231,7 +232,10 @@
                   <h2 class="text-secondary text-uppercase mb-0">Security & Privacy</h2>
                   <hr class="star-dark mb-5">
                   <p class="text-left">
-                    ...
+                    Bitcoin has demonstrated in the financial space that trusted, auditable computing is possible using a decentralized network of peers accompanied by a public ledger. As the blockchain technology arises, a lot of efforts have been devoted to the exploration of using blockchain to redefine traditional businesses. Among all kinds of concerns when using blockchain, data security and user privacy in a decentralized environment are of the topmost significance.
+                  </p>
+                  <p class="text-left">
+                    Our research aims to design a decentralized personal data management system that ensures users own and control their data. In particular, we focus on using smart contracts running on permissioned blockchains to automate access control that does not require trust in a third party. Unlike Bitcoin, transactions in our system are far beyond being strictly financial – they are used to carry instructions, such as storing, querying and sharing data. We devise protocols and guidelines of coding smart contracts towards maximum guarantees on security and privacy – the way that could harness blockchain into a well-rounded solution for trusted computing problems in society.
                   </p>
                   <p class="mb-5"></p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
@@ -303,7 +307,7 @@
             <img class="img-fluid" src="img/portfolio/circles.png" alt="P2P">
           </a>
           <h5 class="text-center mt-2 mb-1">P2P</a></h5>
-          <p class="text-center">...</p>
+          <p class="text-center">Collaborative data sharing and processing in the blockchain ecosystem.</p>
         </div>
         <!-- Project Brief: P2P -->
         <div class="portfolio-modal mfp-hide" id="project-p2p">
@@ -316,7 +320,13 @@
                   <hr class="star-dark mb-5">
                   <p><i class="fa fa-hand-o-right" aria-hidden="true">&nbsp;</i> <a href="https://www.bestpeer.com/" target="_blank">https://www.bestpeer.com/</a></p>
                   <p class="text-left">
-                    ... 
+                    While blockchain is generally adopted for auditable data exchange among untrusted entities (e.g., individuals, companies, agents), mass data transfer between mutually validated peers is often via peer-to-peer (P2P) corporate network.
+                  </p>
+                  <p class="text-left">
+                    The corporate network is often used for sharing information among the participating companies and facilitating collaboration in a certain industry sector where companies share a common interest. It can effectively help the companies to reduce their operational costs and increase the revenues. However, the inter-company data sharing and processing poses unique challenges to such a data management system including scalability, performance, throughput, and security. To tackle the challenge, we developed BestPeer++, a system which delivers elastic data sharing services for corporate network applications in the cloud and blockchain ecosystem based on BestPeer – a P2P based data management platform.
+                  </p>
+                  <p class="text-left">
+                    By integrating cloud computing, database, blockchain, and P2P technologies into one system, BestPeer++ provides an economical, flexible and scalable platform for corporate network applications and delivers data sharing services to participants based on the widely accepted pay-as-you-go business model.
                   </p>
                   <p class="mb-5"></p>
                   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#"><i class="fa fa-close mr-2"></i>Close Project</a>
@@ -348,7 +358,7 @@
                   <h2 class="text-secondary text-uppercase mb-0">DApp</h2>
                   <hr class="star-dark mb-5">
                   <p class="text-left">
-                    As opposed to traditional, centralized applications, where the backend code is running on centralized servers,  decentralized applications (DApps) have their backend code running on a decentralized P2P network. DApps can be viewed as a "blockchain enabled" website, where the smart contract is what allows it to connect to the blockchain. Smart contracts are so powerful that it enables us to restructure many traditional businesses. In particular, we have been spending effort on the revolution of healthcare service provision with the adoption of blockchain technology. 
+                    As opposed to traditional, centralized applications, where the backend code is running on centralized servers, decentralized applications (DApps) have their backend code running on a decentralized P2P network. DApps can be viewed as a "blockchain enabled" website, where the smart contract is what allows it to connect to the blockchain. Smart contracts are so powerful that it enables us to restructure many traditional businesses. In particular, we have been spending effort on the revolution of healthcare service provision with the adoption of blockchain technology.
                   </p>
                   <p class="text-left">
                     Today, patient EHR history is inevitably fragmented across health agencies she/he ever visited. By looking into the issue, trustiness is the main obstacle of inter-agency EHR data sharing. Such situation definitely needs to be changed towards building a patient-centric health system. The emerging blockchain technology can be relied on for the revolution, and we are specialized at architecting the healthcare blockchain ecosystem. To that end, our developing platform can provide the following services:
