--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <img class="img-fluid" src="img/portfolio/pump.png" alt="BlockBench">
           </a>
-          <h5 class="text-center mt-2 mb-1">Benchmakring</a></h5>
+          <h5 class="text-center mt-2 mb-1">Benchmarking</a></h5>
           <p class="text-center">Profiling blockchain implementation for DApp and research, in terms of performance and security.</p>
         </div>
         <!-- Project Brief: BlockBench -->
@@ -150,7 +150,7 @@
             <div class="container text-center">
               <div class="row">
                 <div class="col-lg-8 mx-auto">
-                  <h2 class="text-secondary text-uppercase mb-0">Benchmakring</h2>
+                  <h2 class="text-secondary text-uppercase mb-0">Benchmarking</h2>
                   <hr class="star-dark mb-5">
                   <p><i class="fa fa-hand-o-right" aria-hidden="true">&nbsp;</i> <a href="https://www.comp.nus.edu.sg/~dbsystem/blockbench/" target="_blank">https://www.comp.nus.edu.sg/~dbsystem/blockbench/</a></p>
                   <p class="text-left">
@@ -320,7 +320,7 @@
                   <hr class="star-dark mb-5">
                   <p><i class="fa fa-hand-o-right" aria-hidden="true">&nbsp;</i> <a href="https://www.bestpeer.com/" target="_blank">https://www.bestpeer.com/</a></p>
                   <p class="text-left">
-                    While blockchain is generally adopted for auditable data exchange among untrusted entities (e.g., individuals, companies, agents), mass data transfer between mutually validated peers is often via peer-to-peer (P2P) corporate network.
+                    While blockchain is generally adopted for auditable data exchange among untrusted entities (individuals, companies, agents, etc.), massive data transfer between mutually validated peers is often via peer-to-peer (P2P) corporate network.
                   </p>
                   <p class="text-left">
                     The corporate network is often used for sharing information among the participating companies and facilitating collaboration in a certain industry sector where companies share a common interest. It can effectively help the companies to reduce their operational costs and increase the revenues. However, the inter-company data sharing and processing poses unique challenges to such a data management system including scalability, performance, throughput, and security. To tackle the challenge, we developed BestPeer++, a system which delivers elastic data sharing services for corporate network applications in the cloud and blockchain ecosystem based on BestPeer – a P2P based data management platform.
